# particle-filter-tracking

./: .gitignore  README.md
cpu/: CMakeLists.txt  app_cpu_tracking.xml  vParticleFilterTracker.ini
cpu/include/: vControlLoopDelay.h  vParticle.h
cpu/src/: module.cpp  vControlLoopDelay.cpp  vParticle.cpp
misc/: diagrams.pptx
scripts/: calc_accuracy.m  calc_accurcay.m  calc_dataset_stats.m  calc_latency.m  fix_GT.m  global_options.m  plot_accuracy.m  plot_dataset_comparison.m  plot_latency.m  plot_tracking.m
spinnaker/: Makefile  bug.patch  pfMain.py  process_and_plot.py
spinnaker/ICUB_input_vertex/: ICUB_input_vertex.py
spinnaker/ICUB_output_vertex/: ICUB_output_vertex.py
spinnaker/helpers/: constants.py  read_dataset.py
spinnaker/misc/: automatic_make.sh
spinnaker/pf_fullparticle/: Makefile  pf_fullparticle.c  pf_fullparticle_vertex.py
spinnaker/pf_fullparticle/src/: pf_fullparticle.c
spinnaker/roi_filter/: Makefile  roi_filter.c  roi_filter_vertex.py
